Page breakdown, CSS

--- a/gwtproject/src/main/webapp/Main.html
+++ b/gwtproject/src/main/webapp/Main.html
@@ -44,7 +44,9 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-
-   
+    	<div id="searchBar" align="center"></div>
+        <div id="tableDiv" align="center"></div>
+        <div id="pageBar" align="center"></div>
+        <div id="console" align="center"></div>
   </body>
 </html>
