--- a/gwtproject/src/main/webapp/Main.html
+++ b/gwtproject/src/main/webapp/Main.html
@@ -43,8 +43,24 @@
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
-    </noscript>
-    	<div id="searchBar" align="center"></div>
+    </noscript><h1>CUSTOMER DATABASE SEARCH ENGINE</h1>
+    	<div id="searchBar" align="center">
+    	<table>
+    		<tr>
+    			<td>&nbsp;First Name</td>
+    			<td>&nbsp;Last Name</td>
+    			<td></td>
+    			<td></td>
+    		</tr>
+    		<tr>
+    			<td id="tbFirstName"></td>
+    			<td id="tbLastName"></td>
+    			<td id="bSearch"></td>
+    			<td id="bClear"></td>
+    		</tr>
+    	</table>
+    	
+    	</div>
         <div id="tableDiv" align="center"></div>
         <div id="pageBar" align="center"></div>
         <div id="console" align="center"></div>
