--- a/gwtproject/src/main/webapp/Main.html
+++ b/gwtproject/src/main/webapp/Main.html
@@ -43,7 +43,7 @@
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
-    </noscript><h1>CUSTOMER DATABASE SEARCH ENGINE</h1>
+    </noscript><h1>CUSTOMER DATABASE</h1>
     	<div id="searchBar" align="center">
     	<table>
     		<tr>
