--- a/gwtproject/src/main/webapp/Main.html
+++ b/gwtproject/src/main/webapp/Main.html
@@ -43,12 +43,28 @@
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
-    </noscript><h1>CUSTOMER DATABASE</h1>
+    </noscript>
+    <div id="loginBar" align="center">
+        	<table>
+    		<tr>
+    			<td id="lPort"></td>
+    			<td id="tbPort"></td>
+    			<td id="lUser"></td>
+	    		<td id="tbUser"></td>
+    			<td id="lPass"></td>
+    			<td id="tbPass"></td>
+   				<td id="bLogin"></td>
+    		</tr>
+			</table> 
+    
+    </div>
+    	<h1>CUSTOMER DATABASE</h1>
+    
     	<div id="searchBar" align="center">
     	<table>
     		<tr>
-    			<td>&nbsp;First Name</td>
-    			<td>&nbsp;Last Name</td>
+    			<td id="lFirstName"></td>
+    			<td id="lLastName"></td>
     			<td></td>
     			<td></td>
     		</tr>
